# GORCHAN

./: .gitignore  GORCHAN.sln  README.md  run.bat  Документы.txt  НОВОЕ_ПОКОЛЕНИЕ.txt  ЧЕРНОВИК.txt
GORCHAN/: CMakeLists.txt  GORCHAN.Id_481000181afc0001.vcxproj  GORCHAN.cpp  GORCHAN.h  GORCHAN.vcxproj  GORCHAN.vcxproj.Id_48000181afb0003.filters  GORCHAN.vcxproj.filters  base_decoder.cpp  base_decoder.h  base_shape.cpp  base_shape.h  bg_context.cpp  bg_context.h  dllmain.cpp  ear.cpp  ear.h  eos_shape.cpp  eos_shape.h  fona_shape.cpp  fona_shape.h  framework.h  howis_shape.cpp  howis_shape.h  indexator.cpp  indexator.h  link.cpp  link.h  linker.cpp  linker.h  ls_memory.cpp  ls_memory.h  mind.cpp  mind.h  mind_callback.cpp  mind_callback.h  mind_preservation_service.cpp  mind_preservation_service.h  pch.h  rule.cpp  rule.h  (+9 more)
GORCHAN-2.0/: GORCHAN-2.0.cpp  GORCHAN-2.0.rc  GORCHAN-2.0.sln  GORCHAN-2.0.vcxproj  GORCHAN-2.0.vcxproj.filters  Resource.h  audio_capture.cpp  audio_capture.h  audio_sensor.cpp  audio_sensor.h  framework.h  mind_sphere.cpp  mind_sphere.h  signal.cpp  signal.h  signal_b.cpp  signal_b.h  signal_g.cpp  signal_g.h  signal_r.cpp  signal_r.h  sintezator_base.cpp  sintezator_base.h  stdafx.h  (+2 more)
GORCHAN/Mind/: log.txt
GORCHAN/Mind/indexes/: shape_indexator.txt
GORCHAN/lib/: gexception.cpp  gexception.h  gthread.cpp  gthread.h  indexator.cpp  indexator.h  rule_priority_queue_comparer.cpp  rule_priority_queue_comparer.h
TestApplication/: CMakeLists.txt  TestApplication.cpp  TestApplication.vcxproj  main.cpp  test_Unicode.txt  test_Unicode_2.txt
(+12 files in other folders)
